# serializer version: 1
# name: test_humidifier_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Air Purifier 131s][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Air Purifier 200s][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Air Purifier 400s][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Air Purifier 600s][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Humidifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'max_humidity': 80,
        'min_humidity': 30,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'humidifier',
      'entity_category': None,
      'entity_id': 'humidifier.humidifier_200s_none',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '200s-humidifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_humidifier_state[Humidifier 200s][humidifier.humidifier_200s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'automatic_stop_reach_target': True,
      'current_humidity': 35,
      'display': True,
      'friendly_name': 'Humidifier 200s None',
      'humidity': 40,
      'humidity_high': False,
      'max_humidity': 80,
      'min_humidity': 30,
      'mist_level': 0,
      'mist_virtual_level': 6,
      'mode': 'manual',
      'supported_features': <HumidifierEntityFeature: 0>,
      'water_lacks': True,
      'water_tank_lifted': True,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.humidifier_200s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_humidifier_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Humidifier 600S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'max_humidity': 80,
        'min_humidity': 30,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'humidifier',
      'entity_category': None,
      'entity_id': 'humidifier.humidifier_600s_none',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '600s-humidifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_humidifier_state[Humidifier 600S][humidifier.humidifier_600s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'automatic_stop_reach_target': True,
      'current_humidity': 35,
      'display': True,
      'friendly_name': 'Humidifier 600S None',
      'humidity': 40,
      'humidity_high': False,
      'max_humidity': 80,
      'min_humidity': 30,
      'mist_level': 0,
      'mist_virtual_level': 6,
      'mode': 'manual',
      'night_light_brightness': 10,
      'supported_features': <HumidifierEntityFeature: 0>,
      'warm_mist_enabled': False,
      'warm_mist_level': 0,
      'water_lacks': True,
      'water_tank_lifted': True,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.humidifier_600s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_humidifier_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Outlet][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_humidifier_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_humidifier_state[Wall Switch][entities]
  list([
  ])
# ---
